[package]
name = "ledger-transport-hid"
description = "Ledger Hardware Wallet - HID Transport"
version = "0.8.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/zondax/ledger-rs"
repository = "https://github.com/zondax/ledger-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "blue", "apdu"]
edition = "2018"
autobenches = false

[badges]
circle-ci = { repository = "zondax/ledger-rs" }

[lib]
name = "ledger"

[dependencies]
byteorder = "1.4.2"
libc = "0.2.85"
thiserror = "1.0.23"
cfg-if = "1.0.0"
lazy_static = "1.4.0"
hex = "0.4.2"
ledger-apdu = { path = "../ledger-apdu", version = "0.8.0" }
log = "0.4.14"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.19.1"

[dependencies.hidapi]
version = "1.2.5"
default-features = false
features=["linux-static-hidraw"]

[dev-dependencies]
serial_test = "0.5.1"
env_logger = "0.8.2"
